--- a/BredBlog/posts/27082025.md
+++ b/BredBlog/posts/27082025.md
@@ -6,6 +6,7 @@
 After putting off posting anything for about a month, I have finally come around to uploading something to this blog.
 My plan is to create and maintain a regular upload schedule with blog posts to use as motivation for staying consistent in studying and any projects.
 
+
 ---
 
 ## OverTheWire Progress
@@ -23,5 +24,10 @@ So far, I have only completed levels up to Bandit Level 19 (I have put it off fo
  - Completed Levels 10 to 18 between now and the last update.
 Used a few walkthroughs on levels due to complexity and had help from my friend.
 
-- Will try to complete Bandit before the end of next week.
+---
 
+**Today**
+
+Finished all remaining Bandit Levels (18 - 32)
+
+- Level 18
