--- a/BredBlog/posts/27082025.md
+++ b/BredBlog/posts/27082025.md
@@ -11,7 +11,7 @@ My plan is to create and maintain a regular upload schedule with blog posts to u
 
 ## OverTheWire Progress
 
-So far, I have only completed levels up to Bandit Level 19 (I have put it off for a while as well) and recorded some of the progress:
+So far, I have only completed levels up to Bandit Level 16 (I have put it off for a while as well) and recorded some of the progress:
 
 **25/06/25**
 - Completed Level 0 on Bandit - Connected to the host using SSH with the username and password provided, and located the password for Level 1.
@@ -21,13 +21,17 @@ So far, I have only completed levels up to Bandit Level 19 (I have put it off fo
 - Completed Levels 2 to 9 with a friend later in the day - We both helped each other on different levels where we didn't have a solution, and these levels mainly revolved around needing to search for files or specific strings in large data sets to find the passwords. Also used ChatGPT for explaining commands.
 
 **29/06/25**
- - Completed Levels 10 to 18 between now and the last update.
-Used a few walkthroughs on levels due to complexity and had help from my friend.
+ - Completed Levels 10 to 16 between now and the last update.
+Used a few walkthroughs on levels due to complexity and had help from my friend. (Didn't have any notes for these levels)
 
 ---
 
 **Today**
 
-Finished all remaining Bandit Levels (18 - 32)
+Completed only a few levels today (walkthroughs were used in all):
 
-- Level 18
+- Level 16 - For level 16 needed to find the correct port on localhost and send the current password using <span style="color:red">ncat</span>, which returns the SSH key that is used for connecting to the next level.
+
+- Level 17 - Simply use the <span style="color:red">diff</span> bash command to compare two text files, with the password being a string that doesn't match in both files.
+
+- Level 18 - Cannot login into the level with SSH (get logged out instantly after connecting), so just needed to add commands to display a readme file containing the password after the SSH command.
