--- a/BredBlog/posts/28082025.md
+++ b/BredBlog/posts/28082025.md
@@ -16,7 +16,7 @@
 
 ## CTFs
 - In addition to OverTheWire, I will complete labs on HTB and THM for practice. 
-- After a month or two of working on labs I will try joining a basic/beginner level team CTF event.
+- After a few months of working on labs I will try joining a basic/beginner level team CTF event.
 
 ---
 # Plans for 2026
